<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_nav_today"
            android:title="@string/action_today_title" />
        <item
            android:id="@+id/nav_five_days"
            android:icon="@drawable/ic_nav_week"
            android:title="@string/action_five_days_title" />
        <item
            android:id="@+id/nav_one_week"
            android:icon="@drawable/ic_nav_week"
            android:title="@string/action_one_week_title" />
        <item
            android:id="@+id/nav_two_weeks"
            android:icon="@drawable/ic_nav_two_weeks"
            android:title="@string/action_two_weeks_title" />

    </group>

    <item android:title="@string/category_measure">
        <menu>
            <item
                android:id="@+id/nav_switch"
                app:actionLayout="@layout/switch_menu_item"
                android:title="@string/action_change_measure" />
        </menu>
    </item>

</menu>
