<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/temperatures"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/AppTheme.ForecastCategory">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/detail_temp_cat"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/temp_chart"
        android:layout_width="match_parent"
        android:layout_height="100dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/detail_temp_min"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_temp_max"
                android:textSize="14sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical">

            <com.gonnord.weather.ui.view.TemperatureView
                android:id="@+id/temp_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:textColor="@android:color/black"
                app:textSize="14sp"
                android:layout_marginBottom="5dp"/>

            <com.gonnord.weather.ui.view.TemperatureView
                android:id="@+id/temp_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:textColor="@android:color/black"
                app:textSize="14sp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>

