<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wind"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/AppTheme.ForecastCategory">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/detail_wind_cat"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/wind_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Light breeze"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/detail_wind_speed"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_wind_orientation"
                android:textSize="14sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical">

            <com.gonnord.weather.ui.view.SpeedView
                android:id="@+id/wind_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:textColor="@android:color/black"
                app:textSize="14sp"/>

            <TextView
                android:id="@+id/wind_orientation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="NNW"
                android:textSize="14sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

